--- a/src/app/components/home/home.page.html
+++ b/src/app/components/home/home.page.html
@@ -1,22 +1,58 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>home</ion-title>
+  <ion-toolbar class="ion-text-center">
+    <ion-title color="light">
+      Carga de crédito
+    </ion-title>
+    <ion-buttons slot="end">
+      <ion-button fill="outline" color="light" (click)="cerrarSesion()">Cerrar Sesión
+        <ion-icon name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div class="main-container">
-    <h1 *ngIf="usuario">{{usuario.correo}}</h1>
-    <ion-button (click)="cargarCredito('8c95def646b6127282ed50454b73240300dccabc')">Cargar 10</ion-button>
-    <ion-button (click)="cargarCredito('ae338e4e0cbb4e4bcffaf9ce5b409feb8edd5172 ')">Cargar 50</ion-button>
-    <ion-button (click)="cargarCredito('2786f4877b9091dcad7f35751bfcf5d5ea712b2f')">Cargar 100</ion-button>
-    <ion-button (click)="vaciarCredito()">Vaciar</ion-button>
+  <div class="spinner" *ngIf="cargando">
+    <ion-spinner color="dark" style="width: 65px;height: 65px;"></ion-spinner>
   </div>
 
+  <div class="container" *ngIf="usuario && !cargando" >
+    
+    <div class="info-user">
+      <p>Correo: {{usuario.correo}}</p>
+      <p class="perfil-usuario">Perfil: {{usuario.perfil | uppercase}}</p>
+    </div>
+
+    <!-- <ion-button class="titulo-principal" color="warning" shape="round" (click)="cerrarSesion()">
+      {{ usuario.correo }}
+      <ion-icon class="ion-margin-start" name="log-out-outline"></ion-icon>        
+    </ion-button> -->
+    <ion-button [disabled]="usuario.credito == 0" class="ion-margin-top boton-borrar" color="danger" (click)="vaciarCredito()">
+      Borrar créditos
+      <ion-icon class="ion-margin-start" name="trash"></ion-icon>        
+    </ion-button>
+    <h3>Total de créditos</h3> 
+    <div class="contenedor-botones">
+           
+      <div class="boton-numero">
+          
+          <ion-title class="ion-text-center texto-creditos">{{usuario.credito}}</ion-title>
+          <!-- <ion-title class="ion-text-center texto-creditos">320</ion-title> -->
+      </div>
+      
+    </div>
+    
+    <!-- <ion-button (click)="cargarCredito('8c95def646b6127282ed50454b73240300dccabc')">CARGAR 10</ion-button>
+    <ion-button (click)="cargarCredito('ae338e4e0cbb4e4bcffaf9ce5b409feb8edd5172 ')">CARGAR 50</ion-button>
+    <ion-button (click)="cargarCredito('2786f4877b9091dcad7f35751bfcf5d5ea712b2f')">CARGAR 100</ion-button> -->
+
+  </div>
+  
+  <ion-fab horizontal="center" vertical="bottom" class="boton-logout">
+    <ion-fab-button [disabled]="noCarga"  title="Cerrar sesión" (click)="cargarCredito()">      
+      <ion-icon name="qr-code-outline" color="dark"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  
 </ion-content>
