--- a/src/app/components/home/home.page.scss
+++ b/src/app/components/home/home.page.scss
@@ -1,8 +1,82 @@
-.main-container{
-    padding: 5px;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+ion-toolbar{
+  --background:#233a66;
 }
+.boton-logout{
+    position: absolute;
+    bottom: 20px;
+  }
+  
+.info-user{
+  margin-top: 15px;
+  padding: 5px;
+  color: white;
+  background-color: #233a66;
+  border-radius: 8px;
+  border: 5px solid white;
+}
+  
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+}
+
+.container{
+  height: 85%;
+  display: flex;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  // justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.contenedor-botones{
+  display: grid;
+  width: 100%;
+  height: 85%;  
+  // padding: 2px;
+}
+
+.boton-numero{
+  border: 8px solid white;
+  border-radius: 15px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #233a66;
+  flex-direction: column;
+  color: white;
+}
+
+ion-button{
+  --background:red;
+  
+}
+
+.titulo-principal{
+  //background-color: #ffc409;
+  width: 90%;
+  //border-radius: 10px;
+  //text-align: center;
+  margin-top: 30px;
+  //font-size: larger;
+  margin-bottom: 25px;
+  height: 50px;
+}
+
+.texto-creditos{
+  font-size: 180px;
+}
+
+
+
+
