--- a/src/app/components/splash/splash.page.html
+++ b/src/app/components/splash/splash.page.html
@@ -1,13 +1,10 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>splash</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">splash</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div class="contenedor">
+    <div class="container ion-text-center tilt-in-tr">
+      <h2 class="texto-splash">Fernando Luque</h2>
+      <img src="assets/icon.png">
+      <h2 class="texto-splash">4-B</h2>
+    </div>
+  </div>
+  
 </ion-content>
